--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 # CMake 最低版本号要求
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.12)
+
+set(skywalker_project_name "SkywalkerGameServer")
 
 # 项目名称
-project(SkywalkerGameServer)
+project(${skywalker_project_name})
 
 # 服务器代码
 add_subdirectory(src)
