文件夹名称修改

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,15 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_MESSAGE_LOG_LEVEL "STATUS")
 
 # 设置项目名称
-set(skywalker_project_name "SkywalkerGameServer")
+set(skywalker_server_project_name "SkywalkerGameServer")
+
+message(STATUS "Project Name: ${skywalker_server_project_name}")
 
 # 项目名称
-project(${skywalker_project_name})
+project(${skywalker_server_project_name})
 
 # SkywalkerServerFramework
-add_subdirectory(skywalker-server-framework)
+add_subdirectory(SkywalkerServerFramework)
 
 # 服务器代码
-add_subdirectory(src)
+add_subdirectory(Src)
