--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,11 @@
 # 头文件目录
 include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${PROJECT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 # 服务器模块文件夹
-add_subdirectory(module)
+add_subdirectory(Module)
 
 # 执行文件文件夹
-add_subdirectory(executable)
+add_subdirectory(Executable)
