--- a/src/executable/CMakeLists.txt
+++ b/src/executable/CMakeLists.txt
@@ -1,8 +1,15 @@
-set(skywalker_exe_name "skywalker_launcher")
+set(skywalker_game_server_exe_name "SkywalkerServer")
 
-add_executable(${skywalker_exe_name}
-    main.cpp
+file(GLOB skywalker_game_server_source_cpp
+    *.cpp)
+
+file(GLOB skywalker_game_server_source_h
+    *.h)
+
+add_executable(${skywalker_game_server_exe_name}
+    ${skywalker_game_server_source_cpp}
+    ${skywalker_game_server_source_h}
 )
 
 # 关闭警告
-target_compile_options(${skywalker_exe_name} PRIVATE "/wd4819")
+target_compile_options(${skywalker_game_server_exe_name} PRIVATE "/wd4819")
