--- a/SkywalkerServerFramework/CMakeLists.txt
+++ b/SkywalkerServerFramework/CMakeLists.txt
@@ -1,10 +1,16 @@
+function(SkywalkerServerFramework_MessageDebug info)
+    message(STATUS "[Skywalker Server Framework] ${info}")
+endfunction()
+
+SkywalkerServerFramework_MessageDebug("Start Build Skywalker Server Framework")
+
 # SkywalkerTools 路径
 set(skywalker_tools ${PROJECT_SOURCE_DIR})
-message(STATUS "Skywalker Tools PATH: ${skywalker_tools}")
+SkywalkerServerFramework_MessageDebug("Skywalker Tools PATH: ${skywalker_tools}")
 
 # SkywalkerServerFramework 路径
 set(skywalker_server_framework ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "Skywalker server framework PATH" FORCE)
-message(STATUS "Skywalker Server Framework PATH: ${skywalker_server_framework}")
+SkywalkerServerFramework_MessageDebug("Skywalker Server Framework PATH: ${skywalker_server_framework}")
 
 include_directories(
     ${skywalker_tools}
@@ -14,3 +20,5 @@ include_directories(
 add_subdirectory(Plugins)
 
 add_subdirectory(Editor)
+
+SkywalkerServerFramework_MessageDebug("End Build Skywalker Server Framework")
