--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,13 @@
+# #########################################################################
+# 文件: CMakeLists.txt
+# 作者: shyfan
+# 日期: 2023/07/30 12:43:06
+# 功能:
+# #########################################################################
+
 # CMake 最低版本号要求
 cmake_minimum_required(VERSION 3.12)
 
-# 打开 message 输出
 set(CMAKE_MESSAGE_LOG_LEVEL "STATUS")
 
 function(SkywalkerGameServer_MessageDebug info)
@@ -17,6 +23,7 @@ project(${skywalker_server_project_name})
 # SkywalkerServerFramework
 add_subdirectory(SkywalkerServerFramework)
 
+# 开始 SkywalkerGameServer 项目
 SkywalkerGameServer_MessageDebug("Project Name: ${skywalker_server_project_name}")
 
 # 服务器代码
