--- a/SkywalkerServerFramework/Core/CMakeLists.txt
+++ b/SkywalkerServerFramework/Core/CMakeLists.txt
@@ -1,7 +1,18 @@
+# #########################################################################
+# 文件: SkywalkerServerFramework\Core\CMakeLists.txt
+# 作者: shyfan
+# 日期: 2023/07/30 12:34:49
+# 功能:
+# #########################################################################
+
+# Object
 add_subdirectory(Object)
 
+# Module
 add_subdirectory(Module)
 
+# Plugin
 add_subdirectory(Plugin)
 
+# System
 add_subdirectory(System)
