--- a/SkywalkerServerFramework/Plugin/CMakeLists.txt
+++ b/SkywalkerServerFramework/Plugin/CMakeLists.txt
@@ -1,1 +1,8 @@
+# #########################################################################
+# 文件: SkywalkerServerFramework\Plugin\CMakeLists.txt
+# 作者: shyfan
+# 日期: 2023/07/30 12:38:52
+# 功能:
+# #########################################################################
+
 add_subdirectory(LaunchState)
