--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
+# #########################################################################
+# 文件: Src\CMakeLists.txt
+# 作者: shyfan
+# 日期: 2023/07/30 12:42:34
+# 功能:
+# #########################################################################
+
 SkywalkerGameServer_MessageDebug("Start Build SkywalkerGameServer")
 
 # 头文件目录
