--- a/src/module/CMakeLists.txt
+++ b/src/module/CMakeLists.txt
@@ -1,1 +1,8 @@
+# #########################################################################
+# 文件: Src\Module\CMakeLists.txt
+# 作者: shyfan
+# 日期: 2023/07/30 12:42:21
+# 功能:
+# #########################################################################
+
 add_subdirectory(Launcher)
