--- a/src/module/launcher/CMakeLists.txt
+++ b/src/module/launcher/CMakeLists.txt
@@ -1,3 +1,10 @@
+# #########################################################################
+# 文件: Src\Module\Launcher\CMakeLists.txt
+# 作者: shyfan
+# 日期: 2023/07/30 12:41:20
+# 功能:
+# #########################################################################
+
 set(skywalker_game_server_module_name "Launcher")
 
 file(GLOB skywalker_game_server_source_cpp
