--- a/SkywalkerServerEditor/CMakeLists.txt
+++ b/SkywalkerServerEditor/CMakeLists.txt
@@ -30,4 +30,6 @@ include_directories(
     ./
 )
 
+add_subdirectory(Editor)
+
 SkywalkerServerEditor_MessageDebug("End Build Skywalker Server Editor")
