--- a/SkywalkerServerFramework/Plugin/LaunchState/CMakeLists.txt
+++ b/SkywalkerServerFramework/Plugin/LaunchState/CMakeLists.txt
@@ -20,3 +20,7 @@ add_library(${skywalker_server_plugin_name} SHARED
 
 # 关闭警告
 target_compile_options(${skywalker_server_plugin_name} PRIVATE "/wd4819")
+
+target_link_libraries(${skywalker_server_plugin_name} PRIVATE
+    SSFCore
+)
