--- a/SkywalkerServerFramework/Core/CMakeLists.txt
+++ b/SkywalkerServerFramework/Core/CMakeLists.txt
@@ -7,6 +7,10 @@
 
 set(skywalker_server_framework_core_name "SSFCore")
 
+include_directories(
+    ./
+)
+
 file(GLOB skywalker_server_framework_core_source_cpp
     Plugin/*.cpp
     DynamicLib/*.cpp
