--- a/SkywalkerGameClient/CMakeLists.txt
+++ b/SkywalkerGameClient/CMakeLists.txt
@@ -46,6 +46,8 @@ add_executable(${skywalker_game_client_name}
 
 SkywalkerGameClient_Export(${skywalker_game_client_name})
 
+SkywalkerServer_CopyToTarget(${skywalker_game_client_name} ${skywalker_server_client_DIR})
+
 # 关闭警告
 target_compile_options(${skywalker_game_client_name} PRIVATE "/wd4819")
 
