--- a/SkywalkerServerEditor/CMakeLists.txt
+++ b/SkywalkerServerEditor/CMakeLists.txt
@@ -48,6 +48,8 @@ add_executable(${skywalker_server_editor_name}
 
 SkywalkerGameEditor_Export(${skywalker_server_editor_name})
 
+SkywalkerServer_CopyToTarget(${skywalker_server_editor_name} ${skywalker_server_editor_DIR})
+
 # 关闭警告
 target_compile_options(${skywalker_server_editor_name} PRIVATE "/wd4819")
 
