--- a/SkywalkerServerFramework/CMakeLists.txt
+++ b/SkywalkerServerFramework/CMakeLists.txt
@@ -54,6 +54,8 @@ target_link_libraries(${skywalker_server_framework_name} PRIVATE
 
 SkywalkerServerFramework_Export(${skywalker_server_framework_name})
 
+SkywalkerServer_CopyToTarget(${skywalker_server_framework_name} ${skywalker_server_server_DIR})
+
 # 关闭警告
 target_compile_options(${skywalker_server_framework_name} PRIVATE "/wd4819")
 
