--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ cmake_minimum_required(VERSION 3.12)
 
 set(CMAKE_MESSAGE_LOG_LEVEL "STATUS")
 
+# 支持C++17
+set(CMAKE_CXX_STANDARD 17)
+
 function(SkywalkerServer_MessageDebug info)
     message(STATUS "[Skywalker Server] ${info}")
 endfunction()
